<resources>
    <string name="app_name">Quiz App</string>
    <string name="title_name">JAVA Quiz</string>
    <string name="question_1">Q1. Is this a java  language logo?</string>
    <string name="grading_button_text">Grade</string>
    <string name="question_2">Q2. When java was developed?</string>
    <string name="_1990">1990</string>
    <string name="_1991">1991</string>
    <string name="_1995">1995</string>
    <string name="_1999">1999</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <string name="question_3">Q3.  Which are java data types in given list?</string>
    <string name="int_">int</string>
    <string name="double_">double</string>
    <string name="float_">float</string>
    <string name="obj_">obj</string>
    <string name="question_4">Q4. How many bytes "char" data type take?</string>
    <string name="your_answer">your Answer</string>
    <string name="question_5">Q5. What is the output of this code:\n
        public class Test2 {  \n\n
    public static void main(String[] args) {\n\n
       int a=5;\n\n
        int b=5;\n\n
        a++;\n\n
        System.out.println(a);\n\n
        }  \n\n
 }  </string>
    <string name="java_image">java image</string>
</resources>
