<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            style="@style/javaStyle"
            android:text="@string/title_name"
            android:textSize="@dimen/title_name_text_ize"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/question_padding"
            android:text="@string/question_1"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/java_icon"
            android:contentDescription="@string/java_image" />

        <RadioGroup
            android:id="@+id/radio_group_Q_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/false_"
                android:textSize="@dimen/checkbox_text_size"/>

            <RadioButton
                android:id="@+id/radio_button_true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/true_"
                android:textSize="@dimen/checkbox_text_size"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/question_padding"
            android:text="@string/question_2"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size" />
        <RadioGroup
            android:id="@+id/radio_group_Q_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/_1990"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1990"
                android:textSize="@dimen/checkbox_text_size" />

            <RadioButton
                android:id="@+id/_1991"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1991"
                android:textSize="@dimen/checkbox_text_size" />
            <RadioButton
                android:id="@+id/_1995"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1995"
                android:textSize="@dimen/checkbox_text_size"/>
            <RadioButton
                android:id="@+id/_1999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1999"
                android:textSize="@dimen/checkbox_text_size"
               />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/question_padding"
            android:text="@string/question_3"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size" />
        <CheckBox
            android:id="@+id/int_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int_"
            android:textSize="@dimen/checkbox_text_size"/>
        <CheckBox
            android:id="@+id/double_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_"
            android:textSize="@dimen/checkbox_text_size"/>
        <CheckBox
            android:id="@+id/float_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/float_"
            android:textSize="@dimen/checkbox_text_size"/>
        <CheckBox
            android:id="@+id/obj_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obj_"
            android:textSize="@dimen/checkbox_text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/question_padding"
            android:text="@string/question_4"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size" />
        <EditText
            android:id="@+id/q_4_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_answer"
            android:inputType="number"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:textSize="@dimen/edit_text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/question_padding"
            android:text="@string/question_5"
            android:textStyle="bold"
            android:textSize="@dimen/question_text_size" />
        <EditText
            android:id="@+id/q_5_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_answer"
            android:inputType="number"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:textSize="@dimen/edit_text_size"/>
        <Button
            android:id="@+id/grading_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:textColor="@color/button_text_color"
            android:text="@string/grading_button_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:onClick="submit"/>

    </LinearLayout>


</ScrollView>